--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0,
       maximum-scale=1.0, user-scalable=no">
       <link href="index.css" rel="stylesheet" type="text/css">
-      <link rel="shortcut icon" href="logotitle.jpg">
+      <link rel="shortcut icon" href="pictures/logotitle.jpg">
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
   </head>
   <body>
       <div class="navbar">
         <div id="navbar2">
           <a href="#home" id="logocartoon">
-            <img src="logo.png" alt="logo a guy with a red hoodie and yellow
+            <img src="pictures/logo.png" alt="logo a guy with a red hoodie and yellow
             hair" id="logosize" width="70" height="70"></a>
         </div>
       <div class="blog">
-        <a href="#blog">Blog</a>
+        <a href="https://readwriteexecuteit.wordpress.com/" target="_blank">Blog</a>
       </div>
       <div class="contact">
         <a href="#contact">Contact</a>
@@ -42,9 +42,9 @@
         }
       }
       </script> -->
-      <div class="main" id="home">
+      <div class="spacing" id="home">
         <div>
-          <img src="coderguy.png" id="coderguy" width="600" height="500">
+          <img src="pictures/coderguy.png" id="coderguy" width="600" height="500">
         </div>
         <div>
           <p id="welcome"><strong>Welcome,  I am</strong></p>
@@ -53,16 +53,29 @@
       <div>
         <p id="frontend">Future Front-End Developer</p>
       </div>
+    </div>
      <div id="about">
        <hr>
-       <h1><center>About</center></h1>
+       <h1 id="h1about">About</h1>
        <br>
        <br>
+        <img src="pictures/Matibag-with-barong.JPG" id="me">
+        <img src="pictures/Matibag-with-toga.JPG" id="me2">
         <p id="border1">You can call me Al for short. My birthday is August 2, 1997 and I am 23
-          </br>years old. My Zodiac Sign is Leo, it states that I can be a leader,
-          </br>sometimes I'm a leader in school, but I want someday to be on a</br>
-          company I am on. I like progression and learning new stuffs.</br>
+          </br>years old. I'm a Bachelor's of Science in Information Technology graduate. My Zodiac Sign is
+          Leo, it states that I can be a leader, </br>sometimes I'm a leader in school, but I want someday
+          to be on a</br> company I am on. I like progression and learning new stuffs.</br>
           Some say I'm cool and chill, which I agree on.</p>
+        <p id="border2">I worked at SMS Global Technologies Inc., Pasig City. I am a </br>
+           Technical Support there for 3 months. There I learned how to </br>
+           format PC and Laptop on Windows, install licensable apps like </br>
+           Microsoft 365, Kaspersky Anti-virus, fix laptop's keyboard and </br>
+           install printer drivers both from Mac and Windows.</p>
+           <img src="pictures/skatejoshuakkk.png" id="me3">
+        <p id="border3">I had a phone way back 2014 which is an Android and learned and </br>
+           joined a page on Facebook which contains some tips and tutorials on </br>
+           how to root, unroot, flash updateable zips, modify storage, modify </br>
+           icons, fix bootloop and create a custom recovery.</p>
       <h3>School:</h3>
         <ul>
           <li>Legarda Elementary School</li>
@@ -83,33 +96,22 @@
       </div>
     <div id="skills">
       <hr>
-        <h1><center>Skills</center></h1>
+        <h1 id="h1skills">Skills</h1>
         <br>
         <br>
-        <p>I'm a Bachelor's of Science in Information Technology graduate. I
-          know and still learning <em><strong style="font-size: 30px">HTML, CSS and
+        <p>I know and still learning <em><strong style="font-size: 30px">HTML, CSS and
           Javascript.</strong></em></p>I know also some basic <em><strong
           style="font-size: 30px">C++, Java, Python and Mysql</em></strong>.
           What I meant by basic is basic computation like addition, subtraction,
           multiplication and division. Also for loops, do while etc.</p>
-        <br>
-        <p id="border2">I worked at SMS Global Technologies Inc., Pasig City. I am a </br>
-           Technical Support there for 3 months. There I learned how to </br>
-           format PC and Laptop on Windows, install licensable apps like </br>
-           Microsoft 365, Kaspersky Anti-virus, fix laptop's keyboard and </br>
-           install printer drivers both from Mac and Windows.</p>
-        <p id="border3">I had a phone way back 2014 which is an Android and learned and </br>
-           joined a page on Facebook which contains some tips and tutorials on </br>
-           how to root, unroot, flash updateable zips, modify storage, modify </br>
-           icons, fix bootloop and create a custom recovery.</p>
-        <br>
         <p>I know also how to edit photos on <em><strong style="font-size: 30px">
           Adobe Photoshop </em></strong> and edit videos on <em><strong
           style="font-size: 30px;">Adobe Premiere Pro.</em></strong></p>
+        <img src="pictures/programming-languages-logos.png" id="pllogo">
     </div>
     <div id="contact">
       <hr>
-        <h1><center>Contact</center></h1>
+        <h1 id="h1contact">Contact</h1>
           <ul>
             <li><a href="https://www.facebook.com/aljmatibag" target="_blank">Facebook</a></li>
             <li><a href="https://www.linkedin.com/in/al-joshua-matibag-14a66317a/" target="
