--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0,
       maximum-scale=1.0, user-scalable=no">
-      <link href="index.css" rel="stylesheet" type="text/css">
+      <link href="style.css" rel="stylesheet" type="text/css">
       <link rel="shortcut icon" href="pictures/logotitle.jpg">
       <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
   </head>
@@ -71,17 +71,19 @@
            format PC and Laptop on Windows, install licensable apps like </br>
            Microsoft 365, Kaspersky Anti-virus, fix laptop's keyboard and </br>
            install printer drivers both from Mac and Windows.</p>
+           <img src="pictures/NTC.jpg" id="NTC">
            <img src="pictures/skatejoshuakkk.png" id="me3">
-        <p id="border3">I had a phone way back 2014 which is an Android and learned and </br>
-           joined a page on Facebook which contains some tips and tutorials on </br>
-           how to root, unroot, flash updateable zips, modify storage, modify </br>
-           icons, fix bootloop and create a custom recovery.</p>
+<pre id="border3">I had a phone way back 2014 which is an Android and learned and joined
+a page on Facebook which contains some tips and tutorials on how to root,
+unroot, flash updateable zips, modify storage, modify icons, fix bootloop
+and create a custom recovery.</pre>
       <h3>School:</h3>
         <ul>
           <li>Legarda Elementary School</li>
           <li>Ramon Magsaysay Higschool</li>
           <li>The National Teachers College</li>
         </ul>
+        <img src="pictures/youtube.jpg" id="yt">
       <h3>Hobbies:</h3>
         <ul>
           <li>Drawing</li>
@@ -108,6 +110,7 @@
           Adobe Photoshop </em></strong> and edit videos on <em><strong
           style="font-size: 30px;">Adobe Premiere Pro.</em></strong></p>
         <img src="pictures/programming-languages-logos.png" id="pllogo">
+        <img src="pictures/ps-and-pr-logo.png" id="pllogo2">
     </div>
     <div id="contact">
       <hr>
